--- a/assets/main.css
+++ b/assets/main.css
@@ -1,1 +1,15 @@
+@font-face {
+    font-family: 'Brown Std';
+    src: url('/assets/BrownStd-Regular.woff2') format('woff2'),
+         url('/assets/BrownStd-Bold.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Brown Std';
+    src: url('/assets/BrownStd-Bold.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+}
 
