--- a/assets/main.css
+++ b/assets/main.css
@@ -12,4 +12,13 @@
     font-weight: bold;
     font-style: normal;
 }
+body {
+    font-family: 'Brown Std', sans-serif;
+    font-weight: normal;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Brown Std', sans-serif;
+    font-weight: bold;
+}
 
