--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | {{ site.title }}</title>
-    <style>
+<style>
     body {
-        background-color: lightblue;
+        background-color: lightblue !important;
+        color: darkred;
+    }
+    h1 {
+        color: darkred;
     }
 </style>
+
 
   
 <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
