--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,11 @@
-body {
-    background-color: lightblue; /* This will make the background a light blue color */
-    font-family: 'Brown Std', sans-serif;
+body body {
+    background-color: lightgreen !important;
 }
+h1 {
+    color: darkblue !important;
+    font-weight: bold;
+}
+
 
 h1 {
     color: darkred; /* This will turn all h1 headings dark red */
