--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
 
 
   
-<link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
+
 
 
 
