--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,11 @@
-body body {
-    background-color: lightgreen !important;
+body {
+    background-color: lightcoral !important;
 }
 h1 {
     color: darkblue !important;
     font-weight: bold;
 }
+
 
 
 h1 {
