--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
     
     <!-- Link to external stylesheet -->
     <link rel="stylesheet" href="{{ '/styles/style.css' | relative_url }}">
+    <style>
+    body { background-color: yellow; }
+</style>
+
 </head>
 
 <body>
