--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
     <title>{{ page.title }} | {{ site.title }}</title>
     
     <!-- Link to external stylesheet -->
-    <link rel="stylesheet" href="{{ '/styles/style.css' | relative_url }}">
+   <link rel="stylesheet" href="https://thejameser.github.io/wehearyou.github.io/styles/style.css">
+
     <style>
     body { background-color: yellow; }
 </style>
